--- a/WindowsFormsComm/WindowsFormsComm.csproj
+++ b/WindowsFormsComm/WindowsFormsComm.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="MultiThreading_CLS.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
